--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
-		"autoprefixer": "^10.4.8",
-		"postcss": "^8.4.16",
-		"svelte": "^3.49.0",
-		"svelte-check": "^2.8.1",
-		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.1.8",
-		"tslib": "^2.4.0",
-		"typescript": "^4.8.2",
-		"vite": "^3.0.9"
+		"@sveltejs/adapter-auto": "2.0.0",
+		"@sveltejs/kit": "1.12.0",
+		"autoprefixer": "10.4.14",
+		"postcss": "8.4.21",
+		"svelte": "3.57.0",
+		"svelte-check": "3.1.4",
+		"svelte-preprocess": "5.0.3",
+		"tailwindcss": "3.2.7",
+		"tslib": "2.5.0",
+		"typescript": "5.0.2",
+		"vite": "4.2.1"
 	},
 	"type": "module"
 }
